// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleModal it renders 1`] = `
Array [
  <div
    className="schedule-finder__modal-header"
  >
    <div>
      <div
        className="h3 u-small-caps"
        style={
          Object {
            "margin": 0,
          }
        }
      >
         
        Inbound
      </div>
      <h2
        className="h2"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        Oak Grove
      </h2>
    </div>
  </div>,
  <div>
    from 
    <a
      href="/stops/place-mlmnl"
    >
      Malden Center
    </a>
  </div>,
]
`;

exports[`UpcomingDepartures doesn't renders cr departures that don't have a predicted time yet 1`] = `null`;

exports[`UpcomingDepartures renders SL bus predictions 1`] = `
Array [
  <h3>
    Upcoming Departures
  </h3>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__row-header-label"
          scope="col"
        >
          Destinations
        </th>
        <th
          className="schedule-table__th--flex-end"
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-41894293"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--silver-line"
              >
                SL-2
              </div>
            </div>
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          8
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`UpcomingDepartures renders bus predictions 1`] = `
Array [
  <h3>
    Upcoming Departures
  </h3>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__row-header-label"
          scope="col"
        >
          Destinations
        </th>
        <th
          className="schedule-table__th--flex-end"
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-41894293"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--bus"
              >
                1
              </div>
            </div>
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          8
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
      <tr
        aria-controls="trip-41894271"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__row-route"
          >
            <div
              className="schedule-table__row-route-pill m-route-pills"
            >
              <div
                className="u-bg--bus"
              >
                1
              </div>
            </div>
            Harvard
          </div>
        </td>
        <td
          className="schedule-table__time schedule-table__td--flex-end u-bold"
        >
          9
           
          min
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`UpcomingDepartures renders cr predictions 1`] = `
Array [
  <h3>
    Upcoming Departures
  </h3>,
  <table
    className="schedule-table schedule-table--upcoming"
  >
    <thead
      className="schedule-table__header"
    >
      <tr
        className="schedule-table__row-header"
      >
        <th
          className="schedule-table__row-header-label"
          scope="col"
        >
          Destinations
        </th>
        <th
          className="schedule-table__th--flex-end"
          scope="col"
        >
          Trip Details
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-controls="trip-CR-Weekday-Fall-19-515"
        aria-expanded={false}
        className="schedule-table__row"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <td
          className="schedule-table__headsign"
        >
          <span
            aria-hidden="false"
            className="notranslate c-svg__icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </td>
        <td
          className="schedule-table__headsign"
        >
          Worcester
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <div
            className="schedule-table__time-container"
          >
            <div
              className="schedule-table__time"
            >
              1:55 PM
            </div>
          </div>
          <div
            className="u-nowrap text-right u-bold"
          >
            <span
              className="schedule-table__status"
            >
              Train 515 · 
              On time
            </span>
            <span
              className="schedule-table__track"
            >
              
            </span>
          </div>
        </td>
        <td
          className="schedule-table__td schedule-table__td--flex-end"
        >
          <span
            className="c-expandable-block__header-caret"
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#xF107;",
              }
            }
          />
        </td>
      </tr>
    </tbody>
  </table>,
]
`;
